# yscope-docs

./: README.md  Taskfile.yml  pyproject.toml  requirements.txt  taskfile.yaml
.github/: PULL_REQUEST_TEMPLATE.md
conf/: projects.json
docs/: README.md  conf.py  eslint.config.mjs  index.md  next-sitemap.config.js  next-sitemap.config.mjs  next.config.ts  package-lock.json  package.json
docs/_static/: clp-versions.json
docs/app/: Footer.tsx  Navbar.tsx  content.ts  layout.tsx  page.tsx
docs/app/assets/css/: colors.css
docs/app/assets/scss/: styles.scss
docs/app/dev-guide/: layout.tsx  page.tsx
docs/app/shared/: Admonition.tsx  CodeBlock.tsx  ThemeProvider.tsx
docs/components/icons/: GithubIcon.tsx
docs/components/sections/: ContactSection.tsx  Footer.tsx  Navbar.tsx  ZohoSignupForm.tsx
docs/components/ui/: button.tsx  sheet.tsx
docs/dev-docs/: conf.py  index.md  index.rst
docs/dev-docs/_static/: clp-versions.json
docs/dev-docs/dev-guide/: contrib-guides-cpp.md  contrib-guides-general.md  contrib-guides-taskfiles.md  index.md  misc-project-docs.md
docs/dev-guide/: contrib-guides-cpp.md  contrib-guides-overview.md  contrib-guides-taskfiles.md  index.md  misc-deploying.md
docs/homepage/: .gitignore  eslint.config.mjs  next-sitemap.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.cjs
docs/homepage/app/: content.ts  layout.tsx  page.tsx
docs/lib/: utils.ts
scripts/: download-projects.py
server/: .env  README.md  package-lock.json  package.json
server/src/: main.js  routes.js
taskfiles/: docs.yaml
(+20 files in other folders)
